# pyCytoSimplex

./: .gitignore  .readthedocs.yaml  README.md  cleanup  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
docs/: .gitignore  conf.py  index.rst  installation.rst  requirements.txt
docs/api/: index.rst  preprocessing.rst
docs/example/: binary.ipynb  index.rst  quaternary.ipynb  select_top_features.ipynb  ternary.ipynb
docs/source/: index.rst  installation.rst
docs/source/api/: visualization.rst
docs/source/example/: index.rst  quaternary.ipynb
docs/source/release-notes/: 0.1.0.rst  index.rst
src/CytoSimplex/: __init__.py  _binary.py  _normalize.py  _quaternary.py  _select_top_features.py  _ternary.py  _velo_grid.py  normalize.py  quaternary.py  select_top_features.py  similarity.py  ternary.py  velo_grid.py
src/CytoSimplex/tests/: test_pyCytoSimplex.py
src/pyPlotSimplex/: __init__.py  binary.py  normalize.py  quaternary.py  select_top_features.py  similarity.py  ternary.py  util.py  velo_grid.py
src/pyPlotSimplex/tests/: test_pyPlotSimplex.py
tests/: test_pyPlotSimplex.py
